--- a/README
+++ b/README
@@ -10,7 +10,7 @@ Author: Ning Ma (nm4e11@soton.ac.uk)
 
 INSTALL
 
-  RUN dpkg -i cw1-6005-nm4e11.deb
+  RUN dpkg -i cw1-6005-nm4e11_1.0.1_all.deb
 
 USAGE
 
