--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+cw1-6005-nm4e11 (1.0.1) stable; urgency=low
+
+  [NingMa <nm4e11@soton.ac.uk>]
+  * debug index.php
+  * update index.phpdebug index.php
+  * update the cw1-6005-nm4e11 file
+
+-- nm4e11 <nm4e11@soton.ac.uk>   Thu Feb 23 22:14:20 2012 +0000
+
 cw1-6005-nm4e11 (1.0.0) stable; urgency=low
 
   [NingMa <nm4e11@soton.ac.uk>]
