--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ cw1-6005-nm4e11 (1.0.1) stable; urgency=low
   * update index.phpdebug index.php
   * update the cw1-6005-nm4e11 file
 
--- nm4e11 <nm4e11@soton.ac.uk>   Thu Feb 23 22:14:20 2012 +0000
+ -- nm4e11 <nm4e11@soton.ac.uk>  Thu, 23 Feb 2012 22:14:20 +0000 
 
 cw1-6005-nm4e11 (1.0.0) stable; urgency=low
 
